@@ -1,3 +1,7 @@
+2002-11-13  Josh  <huber@alum.wpi.edu>
+
+	* tmda.el: Made the changelist processing faster.
+
 2002-11-13  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* sample.tmdarc: Renamed sample.config.
